--- a/events.html
+++ b/events.html
@@ -109,15 +109,57 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/nubian-gents.jpg" alt="The Nubian Gents" title="The Nubian Gents" name="authorpic" width="123" height="85" id="authorpic" /><br>
+                  <img src="images/ellencomis.jpg" width="69" height="85" alt="Ellen Comis"><br>
     </div>
-                <h2>Arise NY - Family Fun in the Park</h2>
-                <p><strong>Arise New York </strong>presents <strong>Family Fun  in the Park</strong>; Concert and Fa&shy;mi&shy;ly Fun Activities,<strong> Sun&shy;day, May 3rd, 11am-3pm</strong> and <strong>Saturday, August 15th, 11am -3pm </strong>@ <strong>Central Park Naum&shy;burg Bandshell</strong> (Mid-Park from 66th to  72nd Street, NYC).<strong> </strong>...<a href="arise-new-york-family-fun-in-the-park-may-3rd-august-15th.html">Read More</a><br>
+                <h2>Healing Through The Word</h2>
+                <p>In Heb.  11:1 it says, <em>&ldquo;Now faith is the <u>substance</u> of things hoped for, the <u>evidence</u> of things not seen.&rdquo;</em>&nbsp; It is the power by which things that we  desire become the things that we possess.  Faith is an intangible (indescriba&shy;ble) commodity (product or service).  You can&rsquo;t see it &ndash; touch it ...<a href="ellencomis-healing-through-the-word.html">Read More</a>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic2" /><br>
+    </div>
+                <h2>Men:Time to Focus on Your Health!</h2>
+                <p>85% of my  clients are women. Why so few men? Some key reasons. First, women are better at  prioritizing their health. When I reach out to men to talk about their health,  I get the following responses: they're too busy', have other things to focus  on', or generally feel that they are<strong> </strong>...<a href="elizabethmadison-mentime-to-focus-on-your-health.html">Read More</a>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits"> </div>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
+              </div>
+                <h2>Focus On The Children: </h2>
+                <p>Hello  Beloved: Ever wonder with all the things we as believers go through, &ldquo;Where is  God&rdquo;? How did this happen? Why did this happen? When is this going to end? And  on, and on it goes. We can all speculate and we do. But God has all the  answers. I recently discovered an interesting <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/matthew-singh-revival-photo.jpg" alt="" name="authorpic" width="60" height="85" id="authorpic6" /><br>
+    </div>
+                <h2>The Discipleship Factor </h2>
+                <p>When Jesus says, &ldquo;Come follow me&rdquo;, He is  not referring to some well- thought out church program or event, He means come  follow him, come walk with him, come establish a relationship with him, come be  his disciple. Discipleship is all about the <strong><em>relationship</em></strong>.<strong> It is </strong><strong> </strong>...<a href="matthew-singh-the-discipleship-factor.html">Read More</a>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/six-flags-great-adventure-2015 - Copy.jpg" alt="" width="270" height="85" /><br>
+    </div>
+                <h2>Six Flags, Star 991fm, Wlib 1190 Concerts</h2>
+                <p><strong>Get Ready for an Uplifting  Adventure.</strong><strong> </strong><strong>June 20th-Praise  in the </strong><strong>Park featuring Israel &amp; New Breed.</strong> Opening artist Karen Clarke Sheard, sponsored by WLIB ...<a href="six-flags-star-991fm-wlib-1190-concerts.html">Read More</a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/pastor-peter-bruno-jr-.jpg" width="85" height="85" alt="Pastor Peter Bruno"><br>
+  </div>
+                <h2>Rescued Men Conference<br>
+                </h2>
+                <p><strong>Bethel Gospel Taber&shy;nacle</strong> presents <strong>A Legacy  Minded Man Conference Rescued, Sa&shy;turday, June 20th, 8am-1pm</strong> with <strong>Peter Bruno, Eric Butler, Joe  Pellegri&shy;no</strong> &amp; <strong>Lee Rouson</strong>. Po&shy;wer&shy;ful  Post-Conference Work&shy;shops in&shy;cluded. Loca&shy;tion: 110-18 Guy R. ...<a href="arise-new-york-family-fun-in-the-park-may-3rd-august-15th.html">Read More</a>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <br>
+    </div>
+                <h2>Executors of God&rsquo;s Will on Earth<br>
+                </h2>
+                <p>Let&rsquo;s be honest. Every one of us has prayed  prayers we felt were&shy;n&rsquo;t answered.We&rsquo;ve known people  who prayed a...and prayed...and prayed, but nothing happened. Those prayers  didn&rsquo;t make tre&shy;mendous, dynamic power available. Somehow they missed the mark.<strong> </strong>...<a href="arise-new-york-family-fun-in-the-park-may-3rd-august-15th.html">Read More</a>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <img src="images/worship-night-in-america-with-chris-tomlin.jpg" alt="" name="authorpic2" width="64" height="85" id="authorpic3" /><br>
-    </div>
+  </div>
                 <h2>Worship Night America</h2>
                 <p><strong>Chris Tomlin</strong> presents <strong>Worship Night in America</strong> <strong>Satur&shy;day, August 8th, 7pm</strong> with <strong>Chris</strong> <strong>Tomlin</strong>, <strong>Louie</strong> <strong>Gi&shy;glio</strong>, <strong>Max</strong> <strong>Lucado</strong>, <strong>Matt Redman</strong>, <strong>Kari</strong> <strong>Jobe</strong>, <strong>Matt Maher</strong>, <strong>Reuben</strong> <strong>Morgan</strong> and <strong>Rend</strong> <strong>Collective</strong> @ Madison Square Garden Arena,<strong> </strong>...<a href="worship-night-america-chris-tomlin.html">Read More</a><br>
                 </p>
@@ -128,13 +170,11 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <h2>BridgeFest 2015</h2>
                 <p>Join us  for <b>Bridgefest 2015, Friday-Sa&shy;tur&shy;day,  June 26th &amp; 27th</b> @ Ocean Grove, New Jer&shy;sey. This year  our Friday night artist is <b>Shane &amp;  Shane</b>. The <b>concert</b> will begin @ <b>6:30pm</b>. Saturday is an All Day Beach  Day! Enjoy the beach and so many fun  <strong> </strong>...<a href="bridgefest-2015.html">Read More</a><br>
               </p>
-                <div id="articlepic">
+<div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/acker-family-henry-wife-genevieve-rose-edith-and-baby-henry-jr-acker.jpg" name="authorpic" width="69" height="85" id="authorpic7" /><br>
-  </div>
-                <h2>Viewpoint</h2>
-                <p>On our way  from the Bronx by subway to Manhattan to the Path trains to Newark, then took  the bus up to South Orange Avenue to Newark/  Vailsburg, West End Avenue to Mom&rsquo;s family<strong> </strong>...<a href="viewpoint.html">Read More</a><br>
-                  <br>
+                  <img src="images/rose-edith-dad-henry-mom-genevieve-richard-and-henry-jr-.jpg" name="authorpic" width="121" height="85" id="authorpic4" /></div>
+                <h2>Viewpoint: Dads</h2>
+                <p>Mom sometimes stayed home with Henry Jr.  until he got older. Imagine going to big and small churches, storefronts, even  pastors&rsquo; homes. We were so blessed to meet so many wonderful people listening  to sermons and my Dad playing the piano and also learning how to pray together  and witness to others  ...<a href="escape-from-the-holocaust.html">Read More</a>
                 </p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
@@ -143,18 +183,6 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <h2>Grants for NYCHA Residents</h2>
                 <p>James  Monroe Residents Association of the New York City Housing Authority received a  &ldquo;birthday gift&rdquo; of tens of thousands in grants courtesy various elected  officials to celebrate the receipt of their Federal Tax Exempt Status<strong> </strong>...<a href="donaldreid-grants-for-nycha-residents.html">Read More</a><br>
                 </p>
-                <div id="articlepic">
-                  <div class="photocredits"> </div>
-                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
-              </div>
-                <h2>Focus On The Children: </h2>
-                <p>A loving HUG, yes HUG is part of our  real demonstration of love, warm, kindness, compassion. Have you given anyone a  real HUG lately? Not one of those quickie sloppy agape &ldquo;gotta go&rdquo; fake  embraces. Let&rsquo;s just keep it real. Yuck, Yuck, Yuck!!!<strong> </strong>...<a href="focuson.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img style="float:right;" src="images/revival-celebration-2015-matthew-singh.jpg" alt="Pastor Matthew &amp; Ka&shy;thy Singh" width="55" height="85" /><br>
-  </div>
-                <h2>Celebrate Moms </h2>
-                <p>Proverbs  6:20-22&nbsp; &ldquo;My son, keep your father&rsquo;s  command and do not for-sake your mother&rsquo;s teaching. Bind them always on your  heart; fasten them around your neck.&nbsp;  When you walk, they will guide you; when you sleep, they will watch over  you; when you awake they <strong> </strong>...<a href="matthew-singh-celebrate-moms-this-year-with-music-food-and-lots-of-love.html">Read More</a></p>
                 
               </div>
             </div>
