--- a/features.htm
+++ b/features.htm
@@ -135,24 +135,20 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="ads/chris-white.jpg" width="57" height="85" alt="Christopher N. White"></div>
-                <h2>Escape from the Holocaust</h2>
-                <p>In  November 1979, I entered St. Vincent&rsquo;s Hospital on 14th Street in  Man- hattan for my first major knee surgery,  the first of what would eventually be a series of nine surgical procedures. I  was aware that what was ahead would not be pleasant, but knew it was necessary if I wanted to walk  ...<a href="escape-from-the-holocaust.html">Read More</a>
+                  <img src="images/good-news-in-the-city-photo.jpg" alt="" width="132" height="85" /></div>
+                <h2>Good News In The City</h2>
+                <p><strong>Evangelist Luis Palau</strong>, whose ministry is based in Portland, Oregon, has revealed that he and his wife will  be moving temporarily to New York City ahead of a massive, and likely  historical, evangelistic and celebratory event taking place this summer at the  Big Apple's iconic Central Park  ...<a href="good-news-in-the-city.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <span style="background-color:#FFF; padding:10px;"><img src="images/logo-young-life.jpg" alt="" name="authorpic3" width="119" height="85" id="authorpic3" /></span></div>
-                <h2>Young Life A Model Ministry </h2>
-                <p>New York  City is known as the biggest metro&shy;polis with the brightest lights and greatest  op- portunity. Yet beyond the veneer, there are more than 2 million kids living  in the city under the age of 18 who aren&rsquo;t looking for their next career break,  but for deeper meaning and purpose ...<a href="young-life-a-model-ministry-for-reaching-nyc-s-most-disconnected-youth.html">Read More</a>
+                  <img src="images/bobby-riedel.jpg" alt="" name="authorpic" width="81" height="85" id="authorpic" /></div>
+                <h2>Long Island Awakening <br>
+                </h2>
+                <p>The <strong>Long Island Awak</strong><strong>ening</strong> returns on <strong>June 12, 2015</strong> at the Deer Park High School 1 Falcon Place, Deer Park, New York  11729 with a <strong>7pm</strong> start time!  The Long Island Awakening has a goal of bringing the denominations together,  the different cultures and ethni&shy;cites together, and various church   ...<a href="bobby-riedel-long-island-awakening.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bishop-w-l-bonner-head-shot-to-be-used-in-may-article.jpg" alt="Bishop Willliam Lee Bonner" name="authorpic" width="59" height="85" id="authorpic7" title="Bishop Willliam Lee Bonner" /></div>
-                <h2>Bishop William Lee Bonner</h2>
-                <p><strong>Bishop William Lee Bonner</strong>, beloved  pastor of the renowned <strong>Greater Refuge  Temple Church</strong> (GRT) in Harlem and Chief Apostle of the Church of Our Lord  Jesus Christ (COOLJC), has made his transition from labor to great reward on  Good Friday, April 3rd; it was announced by church officials. He  ...<a href="courtship-and-dating.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/newtongabbidon.jpg" title="Rev. Newton Gabiddon" alt="Rev. Newton Gabiddon" name="authorpic" width="74" height="85" id="authorpic8" /></div>
-                <h2>8th Annual Pastor&rsquo;s &amp; Leaders&rsquo; Symposium</h2>
-                <p><strong>Intercessory Prayer Mi&shy;nistry Int&rsquo;l</strong> in  associa&shy;tion with <strong>Concerts  of Prayer Greater NY</strong> presents <strong>8th  Annual Pastors&rsquo; &amp; Lea&shy;ders&rsquo; Prayer Sympo&shy;si&shy;um</strong> <strong><em>Godly  Leadership in Dan&shy;gerous Times</em></strong>. Date: <strong>Fri&shy;day, May 22nd, 9am&ndash; 12:30pm</strong> Spea&shy;ker: <strong>Rev. Dimas Sa&shy;la&shy;be&shy;rios</strong>, ...<a href="8th-annual-pastor-s-leaders-symposium.html">Read More</a>
+                  <img src="images/shane-n-shane.jpg" width="145" height="85" alt="Shane and Shane"><img src="images/scott-cunningham.jpg" alt="" name="authorpic" width="86" height="85" id="authorpic2" /></div>
+                <h2>BridgeFest 2015</h2>
+                <p>The <strong>Bridge Christian Radio</strong> presents a  premier summer celebration with Bible Teaching Seminars by Bridge Tea&shy;chers and  activities for the whole family <strong>Bridgefest  2015, Friday-Sa&shy;tur&shy;day, June 26th &amp; 27th</strong>. <strong>Seminars</strong> start <strong>Friday</strong>, <strong>9am</strong>; <strong>Con&shy;cert</strong> starts  ...<a href="bridgefest2-2015.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
 </div>
@@ -160,16 +156,11 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p><strong>NY/NJ CityFest</strong> with<strong> Luis Palau</strong> is an historic, region-wide  initiative involving more than 1,200 churches and nearly 100 evangelistic  events. The vision is to give you and your church the tools you need to join  with others to share the life-changing message ofJe&shy;sus in a fresh and exciting   ...<a href="ny-nj-cityserve-cityfest.html">Read More</a>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic10" /></div>
-                <h2>Protect Your Bones!</h2>
-                <p>Are your  bones in good health? Do you know how to take good care of them? If you&rsquo;re not  sure, this is a great time to learn about bone health, as May is Osteoporosis  Prevention Month. Osteoporosis is a condition that thins and wea&shy;kens bones,  increasing risk of fractures. It is a silent disease ...<a href="elizabethmadison-protect-your-bones.html">Read More</a>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /></div>
-                <h2>Focus On The Children</h2>
-                <p>Hello  Beloved: Ever wonder with all the things we as believers go through, &ldquo;Where is  God&rdquo;? How did this happen? Why did this happen? When is this going to end? And  on, and on it goes. We can all speculate and we do. But God has all the  answers. I recently discovered an interesting perspective  ...<a href="focuson.html">Read More</a>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
+                  <img src="images/rose-edith-dad-henry-mom-genevieve-richard-and-henry-jr-.jpg" name="authorpic" width="121" height="85" id="authorpic4" /></div>
+                <h2>Viewpoint: Dads</h2>
+                <p>Mom sometimes stayed home with Henry Jr.  until he got older. Imagine going to big and small churches, storefronts, even  pastors&rsquo; homes. We were so blessed to meet so many wonderful people listening  to sermons and my Dad playing the piano and also learning how to pray together  and witness to others  ...<a href="escape-from-the-holocaust.html">Read More</a>
+<div id="articlepic">
+  <div class="photocredits2"> </div>
                   <img src="images/central-park.jpg" alt="" height="75" /></div>
                 <h2>Vision For New York City<br>
                 </h2>
