--- a/index.htm
+++ b/index.htm
@@ -125,15 +125,7 @@ onclick="MM_openBrWindow('ads/wordcenter.html','','scrollbars=yes,width=785,heig
                     src="ads/wordcenterbutton.jpg" alt="The Word Center"
                     height="124" width="124"></a>
             <hr>
-<div id="testpic">
-                  <a href="#"
-                          onclick="MM_openBrWindow('ads/true-worship-church.html','','width=1018,height=646');
-                          return false"><img
-                            src="ads/true-worship-church-banner.png"
-                            alt="True Worhsip Church" height="60"
-                            width="125"></a>
-                  <hr>
-                  <a href="#"
+<div id="testpic"><a href="#"
                           onclick="MM_openBrWindow('ads/elbertchesterad.html','','width=498,height=648');
                           return false"><img
                             src="ads/elbertchesterbanner.jpg"
@@ -155,7 +147,7 @@ onclick="MM_openBrWindow('ads/wordcenter.html','','scrollbars=yes,width=785,heig
 onclick="MM_openBrWindow('ads/stonsdoves.html','','scrollbars=yes,width=618,height=591')"
                             height="125" width="125"></a>
                   <hr>
-                  <a href="#"
+          <a href="#"
 onclick="MM_openBrWindow('ads/nyackad.html','','scrollbars=yes,width=804,height=650')"><img
                             src="ads/nyackmin_btn.jpg" height="80"
                             width="125"></a></div>
@@ -210,20 +202,18 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   </div>
                 </div>
                 <div class="divider"></div>
-                <div id="body_adspace"><img style="cursor:pointer;"
-                        src="ads/mensdiscipleshipnetworkbanner.jpg"
-                        alt="The Man God Blesses" width="600"
-                        height="78" onClick="MM_openBrWindow('ads/mensdiscipleshipnetworkad.html','','scrollbars=yes,width=1018,height=650')"></div>
+                <div id="body_adspace"><span style="text-align: center;"><a onClick="MM_openBrWindow('ads/cityfest-ny.html','','scrollbars=yes,width=918,height=750'); return false" href="#"><img
+                        src="ads/ny-cityfest-banner.jpg"
+                        alt="Good News in the City, NY CITYFEST" width="468"
+                        height="60" ></a></span></div>
                 <div class="divider"></div>
                 <div id="" style="padding-left:10px;
                       padding-top:10px;"> </div>
                 <div class="bodytxt" style="padding:10px;
                       background-color:#e8e2d6">
-                  <div style="float:left; margin-right: 20px;"><a href="images/central-park.jpg"><img src="images/bundesarchiv-bild-146-1985-083-10-anschluss-sterreich-wien.jpg" alt="" name="authorpic" width="300" id="authorpic3" /></a></div>
-                  <p class="style14" style="margin-bottom:-15px;"
-                        align="center">Escape from the Holocaust                  </p>
-                  <p style="margin-top: 15px;">In  November 1979, I entered St. Vincent&rsquo;s Hospital on 14th Street in  Man- hattan for my first major knee surgery,  the first of what would eventually be a series of nine surgical procedures. I  was aware that what was ahead would not be pleasant, but knew it was necessary if I wanted to walk again. I had not  been able to walk ever since suffering a serious knee injury in March 1979  ... <a
-                          href="escape-from-the-holocaust.html">Read More</a></p>
+                  <div><img style="margin:0 auto 10px auto; border-bottom:#F00 solid 4px;" src="images/good-news-in-the-city-photo2.jpg" alt=""  /></div>
+<p style="margin-top: 5px;"><strong>In  November 1979, I entered St. Vincent&rsquo;s Hospital</strong> on 14th Street in  Man- hattan for my first major knee surgery,  the first of what would eventually be a series of nine surgical procedures. I  was aware that what was ahead would not be pleasant, but knew it was necessary if I wanted to walk again. I had not  been able to walk ever since suffering a serious knee injury in March 1979  ... <a
+                          href="good-news-in-the-city.html">Read More</a></p>
                   <div style="clear:both;"></div>
                 </div>
                 <div class="divider"></div>
@@ -293,30 +283,32 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                           <div class="bodytxt">
                             <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <span style="background-color:#FFF; padding:10px;"><img src="images/logo-young-life.jpg" alt="" name="authorpic3" width="119" height="85" id="authorpic3" /></span></div>
-                <h2>Young Life A Model Ministry </h2>
-                <p>New York  City is known as the biggest metro&shy;polis with the brightest lights and greatest  op- portunity. Yet beyond the veneer, there are more than 2 million kids living  in the city under the age of 18 who aren&rsquo;t looking for their next career break,  but for deeper meaning and purpose ...<a href="young-life-a-model-ministry-for-reaching-nyc-s-most-disconnected-youth.html">Read More</a>
-<div id="articlepic">
+                  <img src="images/bobby-riedel.jpg" alt="" name="authorpic" width="81" height="85" id="authorpic" /></div>
+                <h2>Long Island Awakening <br>
+                </h2>
+                <p>The <strong>Long Island Awak</strong><strong>ening</strong> returns on <strong>June 12, 2015</strong> at the Deer Park High School 1 Falcon Place, Deer Park, New York  11729 with a <strong>7pm</strong> start time!  The Long Island Awakening has a goal of bringing the denominations together,  the different cultures and ethni&shy;cites together   ...<a href="bobby-riedel-long-island-awakening.html">Read More</a>
+                  <br>
+                  <br>
+                                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/bishop-w-l-bonner-head-shot-to-be-used-in-may-article.jpg" alt="Bishop Willliam Lee Bonner" name="authorpic" width="59" height="85" id="authorpic7" title="Bishop Willliam Lee Bonner" /></div>
-                <h2>Bishop William Lee Bonner</h2>
-                <p><strong>Bishop William Lee Bonner</strong>, beloved  pastor of the renowned <strong>Greater Refuge  Temple Church</strong> (GRT) in Harlem and Chief Apostle of the Church of Our Lord  Jesus Christ (COOLJC), has made his transition from labor to great reward on  Good Friday, April 3rd; it was announced by church officials. He  ...<a href="courtship-and-dating.html">Read More</a>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/newtongabbidon.jpg" title="Rev. Newton Gabiddon" alt="Rev. Newton Gabiddon" name="authorpic" width="74" height="85" id="authorpic8" /></div>
-                <h2>8th Annual Pastor&rsquo;s &amp; Leaders&rsquo; Symposium</h2>
-                <p><strong>Intercessory Prayer Mi&shy;nistry Int&rsquo;l</strong> in  associa&shy;tion with <strong>Concerts  of Prayer Greater NY</strong> presents <strong>8th  Annual Pastors&rsquo; &amp; Lea&shy;ders&rsquo; Prayer Sympo&shy;si&shy;um</strong> <strong><em>Godly  Leadership in Dan&shy;gerous Times</em></strong>. Date: <strong>Fri&shy;day, May 22nd, 9am&ndash; 12:30pm</strong> Spea&shy;ker: <strong>Rev. Dimas Sa&shy;la&shy;be&shy;rios</strong>, ...<a href="8th-annual-pastor-s-leaders-symposium.html">Read More</a>
-<div id="articlepic">
+                  <img src="images/shane-n-shane.jpg" width="145" height="85" alt="Shane and Shane"><img src="images/scott-cunningham.jpg" alt="" name="authorpic" width="86" height="85" id="authorpic2" /></div>
+                <h2>BridgeFest 2015</h2>
+                <p>The <strong>Bridge Christian Radio</strong> presents a  premier summer celebration with Bible Teaching Seminars by Bridge Tea&shy;chers and  activities for the whole   ...<a href="bridgefest2-2015.html">Read More</a>
+                  <br>
+                  <br>
+                                <div id="articlepic">
                   <div class="photocredits2"> </div>
 </div>
                 <h2>NY-NJ CityServe-CityFest </h2>
                 <p><strong>NY/NJ CityFest</strong> with<strong> Luis Palau</strong> is an historic, region-wide  initiative involving more than 1,200 churches and nearly 100 evangelistic  events. The vision is to give you and your church the tools you need to join  with others to share the life-changing message ofJe&shy;sus in a fresh and exciting   ...<a href="ny-nj-cityserve-cityfest.html">Read More</a>
-<div id="articlepic">
+                  <br>
+                  <br>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic10" /></div>
-                <h2>Protect Your Bones!</h2>
-                <p>Are your  bones in good health? Do you know how to take good care of them? If you&rsquo;re not  sure, this is a great time to learn about bone health, as May is Osteoporosis  Prevention Month. Osteoporosis is a condition that thins and wea&shy;kens bones,  increasing risk of fractures. It is a silent disease ...<a href="elizabethmadison-protect-your-bones.html">Read More</a>
-                <h4 id="articleTitle"><a
+                  <img src="images/rose-edith-dad-henry-mom-genevieve-richard-and-henry-jr-.jpg" name="authorpic" width="121" height="85" id="authorpic4" /></div>
+                <h2>Viewpoint: Dads</h2>
+                <p>Mom sometimes stayed home with Henry Jr.  until he got older. Imagine going to big and small churches, storefronts, even  pastors&rsquo; homes. We were so blessed to meet so many wonderful people listening  to sermons and my Dad playing the piano and also learning how to pray together  and witness to others  ...<a href="escape-from-the-holocaust.html">Read More</a>
+<h4 id="articleTitle"><a
                                     href="features.htm">More Features
                               &gt;&gt; </a></h4>
                           </div>
@@ -329,14 +321,11 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                     </div>
                   </div>
                   <hr style="">
-                  <div style="text-align:center;"><img style="cursor:pointer;"
-                        src="ads/world-healing-international-ministry-banner.jpg"
-                        alt="The Man God Blesses" width="600"
-                        height="77" onClick="MM_openBrWindow('ads/world-healing-international-ministry.html','','scrollbars=yes,width=1018,height=650')"></div>
+                  <div style="text-align:center;"></div>
                   <hr style="">
                   <div class="editordesk">
-                    <h4 id="articleTitle">Editor's desk: We Are All Mothers</h4>
-                    <p><b><i></i></b>Women are  natural Mothers. As in World War II, the women rose to the occasion and stepped  up to the plate, to take care of the homefront and working in jobs usually  given to men ... <a
+                    <h4 id="articleTitle">Editor's desk: Edith stranges</h4>
+                    <p><b><i></i></b>This will be a great summer. Truly the harvest is  ripe and the chur&shy;ches are ready for the overflow. God is looking for a new generation, a new breed of people who are  totally sold out to the eternal purpo&shy;ses of the Kingdom of God ... <a
                             href="edithstranges-editorial-we-are-all-mothers.html">Read More</a></p>
                   </div>
                   <hr style="">
@@ -360,33 +349,35 @@ onclick="MM_openBrWindow('ads/tdjakesad.html','','scrollbars=yes,width=1018,heig
                           <div class="bodytxt">
                             <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/nubian-gents.jpg" alt="The Nubian Gents" title="The Nubian Gents" name="authorpic" width="123" height="85" id="authorpic" /><br>
+                  <img src="images/elizabethmadison.jpg" alt="Elizabeth Madison" name="authorpic" width="57" height="85" id="authorpic2" /><br>
     </div>
-                <h2>Arise NY - Family Fun in the Park</h2>
-                <p><strong>Arise New York </strong>presents <strong>Family Fun  in the Park</strong>; Concert and Fa&shy;mi&shy;ly Fun Activities,<strong> Sun&shy;day, May 3rd, 11am-3pm</strong> and <strong>Saturday, August 15th, 11am -3pm </strong>@ <strong>Central Park Naum&shy;burg Bandshell</strong> (Mid-Park from 66th to  72nd Street, NYC).<strong> </strong>...<a href="arise-new-york-family-fun-in-the-park-may-3rd-august-15th.html">Read More</a><br>
-                </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/worship-night-in-america-with-chris-tomlin.jpg" alt="" name="authorpic2" width="64" height="85" id="authorpic3" /><br>
-    </div>
-                <h2>Worship Night America</h2>
-                <p><strong>Chris Tomlin</strong> presents <strong>Worship Night in America</strong> <strong>Satur&shy;day, August 8th, 7pm</strong> with <strong>Chris</strong> <strong>Tomlin</strong>, <strong>Louie</strong> <strong>Gi&shy;glio</strong>, <strong>Max</strong> <strong>Lucado</strong>, <strong>Matt Redman</strong>, <strong>Kari</strong> <strong>Jobe</strong>, <strong>Matt Maher</strong>, <strong>Reuben</strong> <strong>Morgan</strong> and <strong>Rend</strong> <strong>Collective</strong> @ Madison Square Garden Arena,<strong> </strong>...<a href="worship-night-america-chris-tomlin.html">Read More</a><br>
-                </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/bridgefest-2015-poster.jpg" alt="" name="authorpic" width="140" height="85" id="authorpic5" /><br>
-    </div>
-                <h2>BridgeFest 2015</h2>
-                <p>Join us  for <b>Bridgefest 2015, Friday-Sa&shy;tur&shy;day,  June 26th &amp; 27th</b> @ Ocean Grove, New Jer&shy;sey. This year  our Friday night artist is <b>Shane &amp;  Shane</b>. The <b>concert</b> will begin @ <b>6:30pm</b>. Saturday is an All Day Beach  Day! Enjoy the beach and so many fun  <strong> </strong>...<a href="bridgefest-2015.html">Read More</a><br>
-              </p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/acker-family-henry-wife-genevieve-rose-edith-and-baby-henry-jr-acker.jpg" name="authorpic" width="69" height="85" id="authorpic7" /><br>
-  </div>
-                <h2>Viewpoint</h2>
-                <p>On our way  from the Bronx by subway to Manhattan to the Path trains to Newark, then took  the bus up to South Orange Avenue to Newark/  Vailsburg, West End Avenue to Mom&rsquo;s family<strong> </strong>...<a href="viewpoint.html">Read More</a><br>
+                <h2>Men:Time to Focus on Your Health!</h2>
+                <p>85% of my  clients are women. Why so few men? Some key reasons. First, women are better at  prioritizing their health. When I reach out to men to talk about their health,  I get the following responses: they're too busy', have other things to focus  on', or generally feel that they are<strong> </strong>...<a href="elizabethmadison-mentime-to-focus-on-your-health.html">Read More</a>
+                  <br>
                   <br>
                 </p>
+                <div id="articlepic">
+                  <div class="photocredits"> </div>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" width="68" height="85" alt="Charlotte Hall" /><br>
+              </div>
+                <h2>Focus On The Children: </h2>
+                <p>Hello  Beloved: Ever wonder with all the things we as believers go through, &ldquo;Where is  God&rdquo;? How did this happen? Why did this happen? When is this going to end? And  on, and on it goes. We can all speculate and we do. But God has all the  answers. I recently discovered an  <strong> </strong>...<a href="focuson.html">Read More<br>
+                  <br>
+                </a>                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/matthew-singh-revival-photo.jpg" alt="" name="authorpic" width="60" height="85" id="authorpic6" /><br>
+  </div>
+                <h2>The Discipleship Factor </h2>
+                <p>When Jesus says, &ldquo;Come follow me&rdquo;, He is  not referring to some well- thought out church program or event, He means come  follow him, come walk with him, come establish a relationship with him, come be  his disciple. Discipleship is all about the <strong><em>relationship</em></strong>.<strong> It is </strong><strong> </strong>...<a href="matthew-singh-the-discipleship-factor.html">Read More</a><br>
+                  <br>
+                </p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/six-flags-great-adventure-2015 - Copy.jpg" alt="" width="270" height="85" /><br>
+  </div>
+                <h2>Six Flags, Star 991fm, Wlib 1190 Concerts</h2>
+                <p><strong>Get Ready for an Uplifting  Adventure.</strong><strong> </strong><strong>June 20th-Praise  in the </strong><strong>Park featuring Israel &amp; New Breed.</strong> Opening artist Karen Clarke Sheard, sponsored by WLIB ...<a href="six-flags-star-991fm-wlib-1190-concerts.html">Read More</a>                </p>
                             <div id="articlepic">
                               <div class="photocredits2"> </div>
                               <br>
