--- a/matthew-singh-the-discipleship-factor.html
+++ b/matthew-singh-the-discipleship-factor.html
@@ -2,7 +2,7 @@
 <html><!-- InstanceBegin template="/Templates/article_features.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Welcome to the Love Express</title>
+<title>The Discipleship Factor</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -75,59 +75,21 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
             <div id="maincontent"> <!-- InstanceBeginEditable name="maincontent" -->
                <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
-            <div><img src="images/rose-edith-dad-henry-mom-genevieve-richard-and-henry-jr-.jpg" name="authorpic" width="758" class="full-width-image" id="authorpic" /> </div>
-            <h4 id="articleTitle">Viewpoint: Dads</h4>
-              <div id="authorname"><!--SECTION LEFT END-->
- </div>
-              <p ><strong><em>Around 1953 - Rose, Edith, Dad Henry, Mom Genevieve, Richard and Henry,  Jr.</em></strong><strong> </strong></p>
-              
-              <p>On any  given Sunday after church at Van Nest AOG in the Bronx, and after our pasta  dinner, our Dad Henry would take us kids to either Street Witnessing in Coney  Island or to other churches in the city, New Jersey and West&shy;chester County<em>.</em>
-                </p>
-              <p>Mom sometimes stayed home with Henry Jr.  until he got older. Imagine going to big and small churches, storefronts, even  pastors&rsquo; homes. We were so blessed to meet so many wonderful people listening  to sermons and my Dad playing the piano and also learning how to pray together  and witness to others.</p>
-              <p>We celebrate our Dad Henry who passed away Jan. 27, 1984. A  devoted christian Dad and Husband (when he traveled he sent us postcards  addressed to his sweetheart Gen). A Dad who taught us &ldquo;godly principles.&rdquo;<em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </em></p>
-              <p align="right"><strong>Love You Always,</strong></p>
-              <p align="right"><strong>Rose, Edith &amp; Henry, Jr.</strong></p>
-              <p class="qa">Appointed Dad - Joseph</p>
-              <p>Joseph and Mary were planning to be  married. They were betrothed. Before they came together, Mary was found to be  with child from the Holy Spirit. Joseph was a just man. He thought he would  divorce Mary quietly. But as he thought about these things, an angel of the Lord came to him in a dream. The angel said,  &ldquo;Joseph, son of David, do not be afraid. You can take Mary as your wife; the  baby is from the Holy Spirit. She will have a son. You shall call his name Jesus.  He will save his people from their sins.&rdquo; Joseph woke up from his sleep. He did  what the angel comman&shy;ded him to do. He took Mary as his wife. Later when the  baby was born, Joseph called His name &ldquo;Jesus.&rdquo;</p>
-              <p></p>
-              <p align="center" class="qa"><strong>Heavenly Father</strong> <strong>Christ Jesus</strong></p>
-              <p>Our Father which art in Heaven, Hallowed  be thy name. Thy Kingdom come, thy will be done in earth as it is in heaven.  Give us this day our daily bread and forgive us our debts, as we forgive our  debtors and lead us not into temptation, but deliver us from evil, for thine is  the kingdom, and the power and the glory forever, Amen.</p>
-              <p>Scriptures:  The everlasting Father; Have we not all one Father; Call no man Father on  earth; It is your Father good pleasure; Father if thou be willing; Father  forgive them; We have one Father even God; I honor my Father; As the Father  knoweth me; My father is greater than all; In my Father&rsquo;s house are many  mansions; no man cometh to the Father but by me; I will pray the Father;  whatsoever ye ask of the Father; Father I thank thee that thou hast heard me;  The father, the Word and the Holy Ghost; I ascend to my Father and your Father;  one God and Father of all; the Father of all that believe; Father of mercies,  God of all comfort; Fellowship with the Father.</p>
-              <p align="center" class="qa"><strong>Graduation 2015</strong></p>
-              <p>Congratulations  to grandson Nicholas and granddaughter Priscilla from High School and grandson  Vincent from Middle School.</p>
-              <p>God Bless  all Graduates</p>
-              <p></p>
-              <p align="center" class="qa"><strong>Rose&rsquo; Response</strong></p>
-              <p>Dear  Price T:</p>
-              <p>Thank you for  your warm letter and prayers for <strong>The Love Express</strong> staff. </p>
-              <p>God Bless  you from my Heart.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-              <p align="right"><strong>Rose</strong>              </p>
-              <p align="center" class="qa"><strong>Handyman&rsquo;s Prayer</strong></p>
-              <p align="center"></p>
-              <p align="center">Dear Lord</p>
-              <p align="center">Please  give me the tools</p>
-              <p align="center">I need to  nail the job</p>
-              <p align="center">You&rsquo;ve  given me to do on</p>
-              <p align="center">this  earth - </p>
-              <p align="center">a good  measure of patience,</p>
-              <p align="center">so I can  stay level-headed</p>
-              <p align="center">when I  get into a fix...</p>
-              <p align="center">the power  of prayer,</p>
-              <p align="center">because life is not </p>
-              <p align="center">a  do-it-yourself project...</p>
-              <p align="center">the  perseverance</p>
-              <p align="center">to follow  Your directions,</p>
-              <p align="center">even when  a wrench</p>
-              <p align="center">gets  thrown in the works.</p>
-              <p align="center">Help me  to remember</p>
-              <p align="center">the nuts  &amp; bolts of my faith;</p>
-              <p align="center">The  blueprint for my life</p>
-              <p align="center">is in  Your hands,</p>
-              <p align="center">and all  will work out, </p>
-              <p align="center">according  to Your master plan.</p>
-              <p align="center"></p>
-              <p align="center"><strong>HAPPY FATHER&rsquo;s DAY</strong></p>
-</div><!-- InstanceEndEditable --> 
+            <div id="articlepic"><img src="images/matthew-singh-revival-photo.jpg" alt="" name="authorpic" width="250" height="367" id="authorpic" /> </div>
+            <h4 id="articleTitle">The Discipleship Factor              </h4>
+            <div id="authorname"><strong>Pastor Matthew &amp; Ka&shy;thy  Singh.</strong><!--SECTION LEFT END-->
+            </div>
+            <p><em>Mark 1:17 says &ldquo;And Jesus said to them, come follow me and be my disciples, and I  will make you to become fishers of men.&rdquo;</em></p>
+              <p>When Jesus says, &ldquo;Come follow me&rdquo;, He is  not referring to some well- thought out church program or event, He means come  follow him, come walk with him, come establish a relationship with him, come be  his disciple. Discipleship is all about the <strong><em>relationship</em></strong>.<strong> It is the concept of Heaven.</strong></p>
+              <p><strong><u>Four  steps of the Discipleship process</u></strong></p>
+              <p>&nbsp;<strong><u>1.  Come and seek-</u></strong> When you come to church, look for Jesus. Disciples do  daily devotionals, grow closer in their walk with God by building a  relationship with Him through His word? When we understand His words, then we  may do His works. When you enter the Kingdom of God, aim to sit next to the King and recognize when He is  there, do not be distracted by mundane  things that are of no importance. <strong><u></u></strong></p>
+              <p><strong><u>&nbsp;2. Come  and follow-</u></strong>Being ready to follow means your eyes will no  longer be seeking, your heart is fixed on following. Pursue Him with a goal of  being a disciple. Come to church on time, bring your Bi&shy;ble, take notes and  tithe every week, a true disciple of Christ is  mindful of these habits.</p>
+              <p>&nbsp;<strong><u>3. Come  and become</u></strong> the moment right after you  come and follow, you will become, there will be transformation, from  that of a believer to a disciple. You cannot attract people to Jesus if people  cannot see changes in you. </p>
+              <p>&nbsp;<strong><u>4.  Come and go and make disciples-</u></strong> Become equipped with the knowledge and  skills. Put all that you have learned into practice. Come and become eventually turns into come and go  make disciples of others. </p>
+              <p><strong>Pastor Matthew &amp; Ka&shy;thy Singh @ Starlight Pavillion, </strong><strong>130-01 101st  Avenue,Richmond </strong><strong>Hill, NY 11419.</strong>              </p>
+</div>
+          <div id="body_adspace"></div>
+          <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
               <div id="credits">&copy;2007 The Love Express. All rights reserved. Serving the Christian Community for over 20 years.</div> 
             </div> 
